[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialogic/Nodes/HistoryPopup.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Example Assets/HistoryRows/HistoryRow.tscn" type="PackedScene" id=2]

[node name="HistoryPopup" type="PopupPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 76.0
margin_top = -227.0
margin_right = -66.0
margin_bottom = 255.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
HistoryRow = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryAudio" type="AudioStreamPlayer" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 878.0
margin_bottom = 478.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 874.0
margin_bottom = 10.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryTimeline" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 869.0
margin_bottom = 5.0
custom_constants/separation = 16

[connection signal="about_to_show" from="." to="." method="_on_HistoryPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_HistoryPopup_popup_hide"]
